ffi/tim2tox_ffi.h

// Test-only: Create a new V2TIMManagerImpl instance for testing
// init_path: path for storing Tox profile (e.g., "/tmp/test_node_alice/init")
// local_discovery_enabled: enable local network discovery (1 = enabled, 0 = disabled)
// ipv6_enabled: enable IPv6 (1 = enabled, 0 = disabled)
// Returns: instance handle (pointer as int64_t) on success, 0 on failure
// Note: This function is for testing only and allows multiple independent instances
int64_t tim2tox_ffi_create_test_instance_ex(const char* init_path, int local_discovery_enabled, int ipv6_enabled);
// Test-only: Create a new V2TIMManagerImpl instance for testing (backward compatibility)
// init_path: path for storing Tox profile (e.g., "/tmp/test_node_alice/init")
// Returns: instance handle (pointer as int64_t) on success, 0 on failure
// Note: This function is for testing only and allows multiple independent instances
// Uses default options (local_discovery_enabled=1, ipv6_enabled=1)
int64_t tim2tox_ffi_create_test_instance(const char* init_path);
// Test-only: Set current instance for FFI operations
// instance_handle: handle returned by tim2tox_ffi_create_test_instance
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_set_current_instance(int64_t instance_handle);
// Test-only: Destroy a test instance
// instance_handle: handle returned by tim2tox_ffi_create_test_instance
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_destroy_test_instance(int64_t instance_handle);
// Get current instance ID
// Returns: instance ID (>0 for test instances, 0 for default instance)
int64_t tim2tox_ffi_get_current_instance_id(void);
// Run N iterations on current instance (for tests: accelerate Tox group peer discovery).
// Call from test with set_current_instance set to founder then member1 in turn.
// Returns 1 on success, 0 if current instance or ToxManager is null.
int tim2tox_ffi_iterate_current_instance(int count);
// Run N round-robin iterations on all test instances (for multi-instance tests).
// Each instance is iterated once per round; total rounds = count. Use this to advance
// all instances in one FFI call (e.g. friend connection, group peer discovery).
// Returns number of instances iterated (>= 1 on success), or 0 if none.
int tim2tox_ffi_iterate_all_instances(int count);
// IRC Channel Management
// Connect to IRC server and join a channel
// server: IRC server address (e.g., "irc.libera.chat")
// port: IRC server port (default 6667)
// channel: channel name (e.g., "#libera")
// password: channel password (optional, can be NULL or empty)
// group_id: corresponding Tox group ID
// sasl_username: SASL authentication username (optional, can be NULL)
// sasl_password: SASL authentication password (optional, can be NULL)
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_irc_connect_channel(const char* server, int port, const char* channel, const char* password, const char* group_id, const char* sasl_username, const char* sasl_password, int use_ssl, const char* custom_nickname);
// Disconnect from an IRC channel
// channel: channel name
// Returns: 1 on success, 0 if channel not found
int tim2tox_ffi_irc_disconnect_channel(const char* channel);
// Send a message to an IRC channel
// channel: channel name
// message: message content
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_irc_send_message(const char* channel, const char* message);
// Check if an IRC channel is connected
// channel: channel name
// Returns: 1 if connected, 0 otherwise
int tim2tox_ffi_irc_is_connected(const char* channel);
// Load IRC client dynamic library
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_irc_load_library(const char* library_path);
// Unload IRC client dynamic library
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_irc_unload_library(void);
// Check if IRC library is loaded
// Returns: 1 if loaded, 0 otherwise
int tim2tox_ffi_irc_is_library_loaded(void);
// Connection status callback
// channel: channel name
// status: connection status
// message: status message (optional, can be NULL)
// user_data: user data passed to callback
typedef void (*tim2tox_irc_connection_status_callback_t)(const char* channel, tim2tox_irc_connection_status_t status, const char* message, void* user_data);
// Register connection status callback
// callback: callback function (can be NULL to disable)
// user_data: user data passed to callback
void tim2tox_ffi_irc_set_connection_status_callback(tim2tox_irc_connection_status_callback_t callback, void* user_data);
// User list callback
// channel: channel name
// users: comma-separated list of user nicknames (can be NULL if empty)
// user_data: user data passed to callback
typedef void (*tim2tox_irc_user_list_callback_t)(const char* channel, const char* users, void* user_data);
// Register user list callback
// callback: callback function (can be NULL to disable)
// user_data: user data passed to callback
void tim2tox_ffi_irc_set_user_list_callback(tim2tox_irc_user_list_callback_t callback, void* user_data);
// User join/part callback
// channel: channel name
// nickname: user nickname
// joined: 1 if joined, 0 if parted
// user_data: user data passed to callback
typedef void (*tim2tox_irc_user_join_part_callback_t)(const char* channel, const char* nickname, int joined, void* user_data);
// Register user join/part callback
// callback: callback function (can be NULL to disable)
// user_data: user data passed to callback
void tim2tox_ffi_irc_set_user_join_part_callback(tim2tox_irc_user_join_part_callback_t callback, void* user_data);
// ============================================================================
// Signaling (Call Invitation) APIs
// ============================================================================

// Signaling callback types
typedef void (*tim2tox_signaling_invitation_callback_t)(const char* invite_id, const char* inviter, const char* group_id, const char* data, void* user_data);
typedef void (*tim2tox_signaling_cancel_callback_t)(const char* invite_id, const char* inviter, const char* data, void* user_data);
typedef void (*tim2tox_signaling_accept_callback_t)(const char* invite_id, const char* invitee, const char* data, void* user_data);
typedef void (*tim2tox_signaling_reject_callback_t)(const char* invite_id, const char* invitee, const char* data, void* user_data);
typedef void (*tim2tox_signaling_timeout_callback_t)(const char* invite_id, const char* inviter, void* user_data);
// Add signaling listener (callbacks)
// Returns 1 on success, 0 on failure
int tim2tox_ffi_signaling_add_listener(
    tim2tox_signaling_invitation_callback_t on_invitation,
    tim2tox_signaling_cancel_callback_t on_cancel,
    tim2tox_signaling_accept_callback_t on_accept,
    tim2tox_signaling_reject_callback_t on_reject,
    tim2tox_signaling_timeout_callback_t on_timeout,
    void* user_data
);
// Remove signaling listener
void tim2tox_ffi_signaling_remove_listener(void);
// Invite a user (1-on-1 call)
// invitee: user ID of the person to invite
// data: custom data (JSON string, can be NULL)
// online_user_only: 1 if only online users should receive, 0 otherwise
// timeout: timeout in seconds (0 = no timeout)
// Returns: invite ID on success (written to out_invite_id), empty string on failure
// out_invite_id: buffer to write invite ID (should be at least 64 bytes)
// out_invite_id_len: size of out_invite_id buffer
int tim2tox_ffi_signaling_invite(const char* invitee, const char* data, int online_user_only, int timeout, char* out_invite_id, int out_invite_id_len);
// Invite users in a group
// group_id: group ID
// invitee_list: comma-separated list of user IDs
// data: custom data (JSON string, can be NULL)
// online_user_only: 1 if only online users should receive, 0 otherwise
// timeout: timeout in seconds (0 = no timeout)
// Returns: invite ID on success (written to out_invite_id), empty string on failure
int tim2tox_ffi_signaling_invite_in_group(const char* group_id, const char* invitee_list, const char* data, int online_user_only, int timeout, char* out_invite_id, int out_invite_id_len);
// Cancel an invitation
// invite_id: invite ID returned from invite
// data: custom data (JSON string, can be NULL)
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_signaling_cancel(const char* invite_id, const char* data);
// Accept an invitation
// invite_id: invite ID from invitation callback
// data: custom data (JSON string, can be NULL)
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_signaling_accept(const char* invite_id, const char* data);
// Reject an invitation
// invite_id: invite ID from invitation callback
// data: custom data (JSON string, can be NULL)
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_signaling_reject(const char* invite_id, const char* data);