ffi/dart_compat_layer.h

// Signaling callbacks
void DartSetSignalingReceiveNewInvitationCallback(void* user_data);
void DartSetSignalingInvitationCancelledCallback(void* user_data);
void DartSetSignalingInviteeAcceptedCallback(void* user_data);
void DartSetSignalingInviteeRejectedCallback(void* user_data);
void DartSetSignalingInvitationTimeoutCallback(void* user_data);
void DartSetSignalingInvitationModifiedCallback(void* user_data);
void DartRemoveSignalingListenerForCurrentInstance(void);