dart/lib/ffi/tim2tox_ffi.dart

  
  // Test instance management functions
  late final int Function(ffi.Pointer<pkgffi.Utf8>) createTestInstanceNative =
      _lib.lookupFunction<_create_test_instance_c, int Function(ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_create_test_instance');
  late final int Function(ffi.Pointer<pkgffi.Utf8>, int, int) createTestInstanceExNative =
      _lib.lookupFunction<_create_test_instance_ex_c, int Function(ffi.Pointer<pkgffi.Utf8>, int, int)>('tim2tox_ffi_create_test_instance_ex');
  late final int Function(int) setCurrentInstance =
      _lib.lookupFunction<_set_current_instance_c, int Function(int)>('tim2tox_ffi_set_current_instance');
  late final int Function(int) destroyTestInstance =
      _lib.lookupFunction<_destroy_test_instance_c, int Function(int)>('tim2tox_ffi_destroy_test_instance');
  late final int Function() getCurrentInstanceId =
      _lib.lookupFunction<_get_current_instance_id_c, int Function()>('tim2tox_ffi_get_current_instance_id');
  late final int Function(int) iterateCurrentInstance =
      _lib.lookupFunction<_iterate_current_instance_c, int Function(int)>('tim2tox_ffi_iterate_current_instance');
  late final int Function(int) iterateAllInstances =
      _lib.lookupFunction<_iterate_all_instances_c, int Function(int)>('tim2tox_ffi_iterate_all_instances');
  late final int Function(ffi.Pointer<pkgffi.Utf8>, int, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, int, ffi.Pointer<pkgffi.Utf8>) ircConnectChannel =
      _lib.lookupFunction<_irc_connect_channel_c, int Function(ffi.Pointer<pkgffi.Utf8>, int, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, int, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_irc_connect_channel');
  late final int Function(ffi.Pointer<pkgffi.Utf8>) ircDisconnectChannel =
      _lib.lookupFunction<_irc_disconnect_channel_c, int Function(ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_irc_disconnect_channel');
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>) ircSendMessage =
      _lib.lookupFunction<_irc_send_message_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_irc_send_message');
  late final int Function(ffi.Pointer<pkgffi.Utf8>) ircIsConnected =
      _lib.lookupFunction<_irc_is_connected_c, int Function(ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_irc_is_connected');
  late final int Function(ffi.Pointer<pkgffi.Utf8>) ircLoadLibrary =
      _lib.lookupFunction<_irc_load_library_c, int Function(ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_irc_load_library');
  late final int Function() ircUnloadLibrary =
      _lib.lookupFunction<_irc_unload_library_c, int Function()>('tim2tox_ffi_irc_unload_library');
  late final int Function() ircIsLibraryLoaded =
      _lib.lookupFunction<_irc_is_library_loaded_c, int Function()>('tim2tox_ffi_irc_is_library_loaded');
  late final void Function(ffi.Pointer<ffi.NativeFunction<_irc_connection_status_callback_native>>, ffi.Pointer<ffi.Void>) ircSetConnectionStatusCallback =
      _lib.lookupFunction<_irc_set_connection_status_callback_c, void Function(ffi.Pointer<ffi.NativeFunction<_irc_connection_status_callback_native>>, ffi.Pointer<ffi.Void>)>('tim2tox_ffi_irc_set_connection_status_callback');
  late final void Function(ffi.Pointer<ffi.NativeFunction<_irc_user_list_callback_native>>, ffi.Pointer<ffi.Void>) ircSetUserListCallback =
      _lib.lookupFunction<_irc_set_user_list_callback_c, void Function(ffi.Pointer<ffi.NativeFunction<_irc_user_list_callback_native>>, ffi.Pointer<ffi.Void>)>('tim2tox_ffi_irc_set_user_list_callback');
  late final void Function(ffi.Pointer<ffi.NativeFunction<_irc_user_join_part_callback_native>>, ffi.Pointer<ffi.Void>) ircSetUserJoinPartCallback =
      _lib.lookupFunction<_irc_set_user_join_part_callback_c, void Function(ffi.Pointer<ffi.NativeFunction<_irc_user_join_part_callback_native>>, ffi.Pointer<ffi.Void>)>('tim2tox_ffi_irc_set_user_join_part_callback');

  // ============================================================================
  // Signaling (Call Invitation) FFI Bindings
  // ============================================================================
  
  late final int Function(
    ffi.Pointer<ffi.NativeFunction<_signaling_invitation_callback_native>>,
    ffi.Pointer<ffi.NativeFunction<_signaling_cancel_callback_native>>,
    ffi.Pointer<ffi.NativeFunction<_signaling_accept_callback_native>>,
    ffi.Pointer<ffi.NativeFunction<_signaling_reject_callback_native>>,
    ffi.Pointer<ffi.NativeFunction<_signaling_timeout_callback_native>>,
    ffi.Pointer<ffi.Void>,
  ) signalingAddListenerNative = _lib.lookupFunction<_signaling_add_listener_c, int Function(
    ffi.Pointer<ffi.NativeFunction<_signaling_invitation_callback_native>>,
    ffi.Pointer<ffi.NativeFunction<_signaling_cancel_callback_native>>,
    ffi.Pointer<ffi.NativeFunction<_signaling_accept_callback_native>>,
    ffi.Pointer<ffi.NativeFunction<_signaling_reject_callback_native>>,
    ffi.Pointer<ffi.NativeFunction<_signaling_timeout_callback_native>>,
    ffi.Pointer<ffi.Void>,
  )>('tim2tox_ffi_signaling_add_listener');
  
  late final void Function() signalingRemoveListener = _lib.lookupFunction<_signaling_remove_listener_c, void Function()>('tim2tox_ffi_signaling_remove_listener');

  // Dart-compat per-instance signaling (sends via globalCallback with instance_id)
  late final void Function(ffi.Pointer<ffi.Void>) dartSetSignalingReceiveNewInvitationCallback =
      _lib.lookupFunction<_dart_set_signaling_cb_c, _dart_set_signaling_cb_d>('DartSetSignalingReceiveNewInvitationCallback');
  late final void Function(ffi.Pointer<ffi.Void>) dartSetSignalingInvitationCancelledCallback =
      _lib.lookupFunction<_dart_set_signaling_cb_c, _dart_set_signaling_cb_d>('DartSetSignalingInvitationCancelledCallback');
  late final void Function(ffi.Pointer<ffi.Void>) dartSetSignalingInviteeAcceptedCallback =
      _lib.lookupFunction<_dart_set_signaling_cb_c, _dart_set_signaling_cb_d>('DartSetSignalingInviteeAcceptedCallback');
  late final void Function(ffi.Pointer<ffi.Void>) dartSetSignalingInviteeRejectedCallback =
      _lib.lookupFunction<_dart_set_signaling_cb_c, _dart_set_signaling_cb_d>('DartSetSignalingInviteeRejectedCallback');
  late final void Function(ffi.Pointer<ffi.Void>) dartSetSignalingInvitationTimeoutCallback =
      _lib.lookupFunction<_dart_set_signaling_cb_c, _dart_set_signaling_cb_d>('DartSetSignalingInvitationTimeoutCallback');
  late final void Function(ffi.Pointer<ffi.Void>) dartSetSignalingInvitationModifiedCallback =
      _lib.lookupFunction<_dart_set_signaling_cb_c, _dart_set_signaling_cb_d>('DartSetSignalingInvitationModifiedCallback');
  late final void Function() dartRemoveSignalingListenerForCurrentInstance =
      _lib.lookupFunction<ffi.Void Function(), void Function()>('DartRemoveSignalingListenerForCurrentInstance');

  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, int, int, ffi.Pointer<ffi.Int8>, int) signalingInviteNative =
      _lib.lookupFunction<_signaling_invite_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, int, int, ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_signaling_invite');
  
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, int, int, ffi.Pointer<ffi.Int8>, int) signalingInviteInGroupNative =
      _lib.lookupFunction<_signaling_invite_in_group_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>, int, int, ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_signaling_invite_in_group');
  
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>) signalingCancelNative =
      _lib.lookupFunction<_signaling_cancel_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_signaling_cancel');
  
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>) signalingAcceptNative =
      _lib.lookupFunction<_signaling_accept_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_signaling_accept');
  
  late final int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>) signalingRejectNative =
      _lib.lookupFunction<_signaling_reject_c, int Function(ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_signaling_reject');
  
  // ============================================================================
  // Audio/Video (ToxAV) FFI Bindings
  // ============================================================================
